force-app/main/default/objects/CommercientSF__Syspro_AdmCalendar__c/CommercientSF__Syspro_AdmCalendar__c.object-meta.xml
<CustomObject>
    <label>Syspro Admcalendar</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Admcalendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>