force-app/main/default/objects/CommercientSF__Syspro_AdmCalendar__c/fields/CommercientSF__CalCentury__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CalCentury__c</fullName>
    <description>CalCentury</description>
    <label>Calcentury</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>