force-app/main/default/objects/CommercientSF__Syspro_AdmCalendar__c/fields/CommercientSF__CalDay10__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CalDay10__c</fullName>
    <description>CalDay10</description>
    <label>Calday10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>