force-app/main/default/objects/CommercientSF__Syspro_AdmCalendar__c/fields/CommercientSF__CalDay11__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CalDay11__c</fullName>
    <description>CalDay11</description>
    <label>Calday11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>