force-app/main/default/objects/CommercientSF__Syspro_AdmCalendar__c/fields/CommercientSF__CalDay12__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CalDay12__c</fullName>
    <description>CalDay12</description>
    <label>Calday12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>