force-app/main/default/objects/CommercientSF__Syspro_AdmCalendar__c/fields/CommercientSF__CalMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CalMonth__c</fullName>
    <description>CalMonth</description>
    <label>Calmonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>