force-app/main/default/objects/CommercientSF__Syspro_AdmCalendar__c/fields/CommercientSF__CalYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CalYear__c</fullName>
    <description>CalYear</description>
    <label>Calyear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>